Add bulk edit for tasks (#42)
