# docs/swagger/swagger.yaml
@@ -11,6 +11,50 @@ definitions:
       username:
         type: string
     type: object
+  models.BulkTask:
+    properties:
+      created:
+        type: integer
+      createdBy:
+        $ref: '#/definitions/models.User'
+        type: object
+      description:
+        type: string
+      done:
+        type: boolean
+      dueDate:
+        type: integer
+      endDate:
+        type: integer
+      id:
+        type: integer
+      listID:
+        type: integer
+      parentTaskID:
+        type: integer
+      priority:
+        type: integer
+      reminderDates:
+        items:
+          type: integer
+        type: array
+      repeatAfter:
+        type: integer
+      startDate:
+        type: integer
+      subtasks:
+        items:
+          $ref: '#/definitions/models.ListTask'
+        type: array
+      task_ids:
+        items:
+          type: integer
+        type: array
+      text:
+        type: string
+      updated:
+        type: integer
+    type: object
   models.EmailConfirm:
     properties:
       token:
@@ -1820,6 +1864,50 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get tasks sorted and within a date range
+      tags:
+      - task
+  /tasks/bulk:
+    post:
+      consumes:
+      - application/json
+      description: 'Updates a bunch of tasks at once. This includes marking them as
+        done. Note: although you could supply another ID, it will be ignored. Use
+        task_ids instead.'
+      parameters:
+      - description: The task object. Looks like a normal task, the only difference
+          is it uses an array of list_ids to update.
+        in: body
+        name: task
+        required: true
+        schema:
+          $ref: '#/definitions/models.BulkTask'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: The updated task object.
+          schema:
+            $ref: '#/definitions/models.ListTask'
+            type: object
+        "400":
+          description: Invalid task object provided.
+          schema:
+            $ref: '#/definitions/code.vikunja.io/web.HTTPError'
+            type: object
+        "403":
+          description: The user does not have access to the task (aka its list)
+          schema:
+            $ref: '#/definitions/code.vikunja.io/web.HTTPError'
+            type: object
+        "500":
+          description: Internal error
+          schema:
+            $ref: '#/definitions/models.Message'
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Update a bunch of tasks at once
       tags:
       - task
   /tasks/caldav:
